# RussianDependencyParser

./: CMakeLists.txt  Makefile  README.md  correctDictionary.py  dictionary.cpp  dictionary.h  gendict.cpp  generateSentence.py  generateSentence.py~  genhashtable.cpp  install.sh  launch.sh  main.cpp  main2.tex  model.cpp  model.h  output.txt  paradigm.cpp  paradigm.h  testSentence.txt  testSentence.xml
